# mlsc

./: .gitignore  README.md  model.pth  pyproject.toml
data/test/: results_001.csv
docs/: help.html  help.md
mlsc/: __init__.py  add_test_to_dataset.py  cli.py  dataset.py  generate_data.py  model.py  organize_test_data.py  predict.py  preprocess.py  train.py
